# platformer-rust

./: .gitignore  Cargo.toml  profiler.sh
game/: config.json
profiler/: htop-1.html  htop-10.html  htop-11.html  htop-12.html  htop-13.html  htop-14.html  htop-15.html  htop-16.html  htop-17.html  htop-18.html  htop-19.html  htop-2.html  htop-20.html  htop-21.html  htop-22.html  htop-23.html  htop-24.html  htop-25.html  htop-26.html  htop-27.html  htop-28.html  htop-29.html  htop-3.html  htop-30.html  htop-31.html  htop-32.html  htop-33.html  htop-34.html  htop-35.html  htop-36.html  htop-37.html  htop-38.html  htop-39.html  htop-4.html  htop-40.html  htop-5.html  htop-6.html  htop-7.html  htop-8.html  htop-9.html
src/: lib.rs  main.rs  music.rs.bak
src/bindings/: json.rs  lua.rs  mod.rs
src/containers/: mod.rs  model.rs
src/engine/: lib.rs  mod.rs  scene.rs  window.rs
src/runtime/: main.rs
